[package]
name = "rusthain"
version = "0.1.0"
edition = "2021"
default-run = "meta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "meta"
path = "src/meta.rs"

[[bin]]
name = "main0"
path = "src/0-main.rs"

[[bin]]
name = "main1"
path = "src/1-main.rs"