[package]
name = "rusthain"
version = "0.1.0"
edition = "2021"
default-run = "meta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "meta"
path = "src/meta.rs"

[[bin]]
name = "main1"
path = "src/a-gentle-introduction/main1-hello.rs"

[[bin]]
name = "main2"
path = "src/a-gentle-introduction/main2-adding.rs"
